Edited website to personal

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 /*Large Background Image*/
 html {
-  background: url(../img/pexels-marcus-aurelius-4063619.jpg);
+  background: url(../img/domenico-loia-hGV2TfOh0ns-unsplash.jpg); /*Photo by <a href="https://unsplash.com/@domenicoloia?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Domenico Loia</a> on <a href="https://unsplash.com/photos/macbook-pro-on-table-beside-white-imac-and-magic-mouse-hGV2TfOh0ns?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+*/
   background-size: cover;
   background-position: center;
   height: 100%;
